--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/stack": "^6.2.1",
     "expo": "~44.0.0",
     "expo-camera": "~12.1.2",
+    "expo-location": "~14.0.1",
+    "expo-media-library": "~14.0.0",
     "expo-status-bar": "~1.2.0",
     "firebase": "^9.8.1",
     "react": "17.0.1",
